get prisma working
