# openapi.json
@@ -33,7 +33,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateProduct"
+                "$ref": "#/components/schemas/ProductCreateInput"
               }
             }
           },
@@ -73,7 +73,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Product Id"
             }
           }
@@ -110,7 +110,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Product Id"
             }
           }
@@ -120,7 +120,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateProduct"
+                "$ref": "#/components/schemas/ProductUpdateInput"
               }
             }
           }
@@ -157,7 +157,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Product Id"
             }
           }
@@ -196,7 +196,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Product Id"
             }
           }
@@ -247,7 +247,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/ProductVariantFields"
+                "$ref": "#/components/schemas/ProductVariantCreateInput"
               }
             }
           }
@@ -286,7 +286,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Product Id"
             }
           },
@@ -295,7 +295,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Variant Id"
             }
           }
@@ -332,7 +332,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Product Id"
             }
           },
@@ -341,7 +341,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Variant Id"
             }
           }
@@ -351,7 +351,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/ProductVariantFields"
+                "$ref": "#/components/schemas/ProductVariantUpdateInput"
               }
             }
           }
@@ -388,7 +388,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Product Id"
             }
           },
@@ -397,7 +397,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string",
+              "type": "integer",
               "title": "Variant Id"
             }
           }
@@ -429,34 +429,6 @@
   },
   "components": {
     "schemas": {
-      "CreateProduct": {
-        "properties": {
-          "name": {
-            "type": "string",
-            "title": "Name"
-          },
-          "description": {
-            "type": "string",
-            "title": "Description"
-          },
-          "image_url": {
-            "type": "string",
-            "title": "Image Url"
-          },
-          "price": {
-            "type": "number",
-            "title": "Price"
-          }
-        },
-        "type": "object",
-        "required": [
-          "name",
-          "description",
-          "image_url",
-          "price"
-        ],
-        "title": "CreateProduct"
-      },
       "HTTPValidationError": {
         "properties": {
           "detail": {
@@ -473,7 +445,7 @@
       "Product": {
         "properties": {
           "id": {
-            "type": "string",
+            "type": "integer",
             "title": "Id"
           },
           "name": {
@@ -501,43 +473,117 @@
           "image_url",
           "price"
         ],
-        "title": "Product"
+        "title": "Product",
+        "description": "Represents a Product record"
       },
-      "ProductVariant": {
+      "ProductCreateInput": {
         "properties": {
+          "id": {
+            "type": "integer",
+            "title": "Id"
+          },
           "name": {
             "type": "string",
             "title": "Name"
           },
-          "addl_price": {
-            "type": "number",
-            "title": "Addl Price"
+          "description": {
+            "type": "string",
+            "title": "Description"
           },
           "image_url": {
             "type": "string",
             "title": "Image Url"
           },
+          "price": {
+            "type": "number",
+            "title": "Price"
+          }
+        },
+        "type": "object",
+        "required": [
+          "name",
+          "description",
+          "image_url",
+          "price"
+        ],
+        "title": "ProductCreateInput",
+        "description": "Required arguments to the Product create method"
+      },
+      "ProductUpdateInput": {
+        "properties": {
           "id": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/_IntSetInput"
+              },
+              {
+                "$ref": "#/components/schemas/_IntDivideInput"
+              },
+              {
+                "$ref": "#/components/schemas/_IntMultiplyInput"
+              },
+              {
+                "$ref": "#/components/schemas/_IntIncrementInput"
+              },
+              {
+                "$ref": "#/components/schemas/_IntDecrementInput"
+              },
+              {
+                "type": "integer"
+              }
+            ],
+            "title": "Id"
+          },
+          "name": {
             "type": "string",
+            "title": "Name"
+          },
+          "description": {
+            "type": "string",
+            "title": "Description"
+          },
+          "image_url": {
+            "type": "string",
+            "title": "Image Url"
+          },
+          "price": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/_FloatSetInput"
+              },
+              {
+                "$ref": "#/components/schemas/_FloatDivideInput"
+              },
+              {
+                "$ref": "#/components/schemas/_FloatMultiplyInput"
+              },
+              {
+                "$ref": "#/components/schemas/_FloatIncrementInput"
+              },
+              {
+                "$ref": "#/components/schemas/_FloatDecrementInput"
+              },
+              {
+                "type": "number"
+              }
+            ],
+            "title": "Price"
+          }
+        },
+        "type": "object",
+        "title": "ProductUpdateInput",
+        "description": "Optional arguments for updating a record"
+      },
+      "ProductVariant": {
+        "properties": {
+          "id": {
+            "type": "integer",
             "title": "Id"
           },
           "product_id": {
             "type": "string",
             "title": "Product Id"
-          }
-        },
-        "type": "object",
-        "required": [
-          "name",
-          "addl_price",
-          "image_url",
-          "id",
-          "product_id"
-        ],
-        "title": "ProductVariant"
-      },
-      "ProductVariantFields": {
-        "properties": {
+          },
           "name": {
             "type": "string",
             "title": "Name"
@@ -553,11 +599,112 @@
         },
         "type": "object",
         "required": [
+          "id",
+          "product_id",
           "name",
           "addl_price",
           "image_url"
         ],
-        "title": "ProductVariantFields"
+        "title": "ProductVariant",
+        "description": "Represents a ProductVariant record"
+      },
+      "ProductVariantCreateInput": {
+        "properties": {
+          "id": {
+            "type": "integer",
+            "title": "Id"
+          },
+          "product_id": {
+            "type": "string",
+            "title": "Product Id"
+          },
+          "name": {
+            "type": "string",
+            "title": "Name"
+          },
+          "addl_price": {
+            "type": "number",
+            "title": "Addl Price"
+          },
+          "image_url": {
+            "type": "string",
+            "title": "Image Url"
+          }
+        },
+        "type": "object",
+        "required": [
+          "product_id",
+          "name",
+          "addl_price",
+          "image_url"
+        ],
+        "title": "ProductVariantCreateInput",
+        "description": "Required arguments to the ProductVariant create method"
+      },
+      "ProductVariantUpdateInput": {
+        "properties": {
+          "id": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/_IntSetInput"
+              },
+              {
+                "$ref": "#/components/schemas/_IntDivideInput"
+              },
+              {
+                "$ref": "#/components/schemas/_IntMultiplyInput"
+              },
+              {
+                "$ref": "#/components/schemas/_IntIncrementInput"
+              },
+              {
+                "$ref": "#/components/schemas/_IntDecrementInput"
+              },
+              {
+                "type": "integer"
+              }
+            ],
+            "title": "Id"
+          },
+          "product_id": {
+            "type": "string",
+            "title": "Product Id"
+          },
+          "name": {
+            "type": "string",
+            "title": "Name"
+          },
+          "addl_price": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/_FloatSetInput"
+              },
+              {
+                "$ref": "#/components/schemas/_FloatDivideInput"
+              },
+              {
+                "$ref": "#/components/schemas/_FloatMultiplyInput"
+              },
+              {
+                "$ref": "#/components/schemas/_FloatIncrementInput"
+              },
+              {
+                "$ref": "#/components/schemas/_FloatDecrementInput"
+              },
+              {
+                "type": "number"
+              }
+            ],
+            "title": "Addl Price"
+          },
+          "image_url": {
+            "type": "string",
+            "title": "Image Url"
+          }
+        },
+        "type": "object",
+        "title": "ProductVariantUpdateInput",
+        "description": "Optional arguments for updating a record"
       },
       "Success": {
         "properties": {
@@ -571,34 +718,6 @@
           "success"
         ],
         "title": "Success"
-      },
-      "UpdateProduct": {
-        "properties": {
-          "name": {
-            "type": "string",
-            "title": "Name"
-          },
-          "description": {
-            "type": "string",
-            "title": "Description"
-          },
-          "image_url": {
-            "type": "string",
-            "title": "Image Url"
-          },
-          "price": {
-            "type": "number",
-            "title": "Price"
-          }
-        },
-        "type": "object",
-        "required": [
-          "name",
-          "description",
-          "image_url",
-          "price"
-        ],
-        "title": "UpdateProduct"
       },
       "ValidationError": {
         "properties": {
@@ -632,6 +751,136 @@
           "type"
         ],
         "title": "ValidationError"
+      },
+      "_FloatDecrementInput": {
+        "properties": {
+          "decrement": {
+            "type": "number",
+            "title": "Decrement"
+          }
+        },
+        "type": "object",
+        "required": [
+          "decrement"
+        ],
+        "title": "_FloatDecrementInput"
+      },
+      "_FloatDivideInput": {
+        "properties": {
+          "divide": {
+            "type": "number",
+            "title": "Divide"
+          }
+        },
+        "type": "object",
+        "required": [
+          "divide"
+        ],
+        "title": "_FloatDivideInput"
+      },
+      "_FloatIncrementInput": {
+        "properties": {
+          "increment": {
+            "type": "number",
+            "title": "Increment"
+          }
+        },
+        "type": "object",
+        "required": [
+          "increment"
+        ],
+        "title": "_FloatIncrementInput"
+      },
+      "_FloatMultiplyInput": {
+        "properties": {
+          "multiply": {
+            "type": "number",
+            "title": "Multiply"
+          }
+        },
+        "type": "object",
+        "required": [
+          "multiply"
+        ],
+        "title": "_FloatMultiplyInput"
+      },
+      "_FloatSetInput": {
+        "properties": {
+          "set": {
+            "type": "number",
+            "title": "Set"
+          }
+        },
+        "type": "object",
+        "required": [
+          "set"
+        ],
+        "title": "_FloatSetInput"
+      },
+      "_IntDecrementInput": {
+        "properties": {
+          "decrement": {
+            "type": "integer",
+            "title": "Decrement"
+          }
+        },
+        "type": "object",
+        "required": [
+          "decrement"
+        ],
+        "title": "_IntDecrementInput"
+      },
+      "_IntDivideInput": {
+        "properties": {
+          "divide": {
+            "type": "integer",
+            "title": "Divide"
+          }
+        },
+        "type": "object",
+        "required": [
+          "divide"
+        ],
+        "title": "_IntDivideInput"
+      },
+      "_IntIncrementInput": {
+        "properties": {
+          "increment": {
+            "type": "integer",
+            "title": "Increment"
+          }
+        },
+        "type": "object",
+        "required": [
+          "increment"
+        ],
+        "title": "_IntIncrementInput"
+      },
+      "_IntMultiplyInput": {
+        "properties": {
+          "multiply": {
+            "type": "integer",
+            "title": "Multiply"
+          }
+        },
+        "type": "object",
+        "required": [
+          "multiply"
+        ],
+        "title": "_IntMultiplyInput"
+      },
+      "_IntSetInput": {
+        "properties": {
+          "set": {
+            "type": "integer",
+            "title": "Set"
+          }
+        },
+        "type": "object",
+        "required": [
+          "set"
+        ],
+        "title": "_IntSetInput"
       }
     }
   }
